--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty_paserk"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
 repository = "https://github.com/conradludgate/rusty-paserk"
@@ -53,8 +53,8 @@ rand = "0.8.5"
 # V4
 chacha20 = { version = "0.9.1", optional = true }
 blake2 = { version = "0.10.6", optional = true }
-ed25519-dalek = { version = "=2.0.0-rc.3", features = ["hazmat"], optional = true }
-curve25519-dalek = { version = "=4.0.0-rc.3", optional = true }
+ed25519-dalek = { version = "2.0.0", features = ["hazmat"], optional = true }
+curve25519-dalek = { version = "4.0.0", optional = true }
 argon2 = { version = "0.5.0", optional = true }
 
 # V3
