update to rusty_paseto 0.7

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,14 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --no-default-features --features v3 --tests
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --no-default-features --features v4 --tests
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
