--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty_paserk"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
 repository = "https://github.com/conradludgate/rusty-paserk"
@@ -16,7 +16,7 @@ categories = [
 ]
 
 [features]
-default = ["v3", "v4"]
+default = ["v4"]
 # V3 contains NIST approved algoritms only
 v3 = [
   "hmac",
@@ -39,13 +39,15 @@ v4 = [
   "rusty_paseto/v4_local",
   "rusty_paseto/v4_public"
 ]
+serde = ["dep:serde"]
+arbitrary = ["dep:arbitrary"]
 
 [dependencies]
-rusty_paseto = { version = "0.6.0", default-features = false, features = ["core"] }
+rusty_paseto = { version = "0.7.0", default-features = false, features = ["core"] }
 subtle = "2.5.0"
 generic-array = "0.14"
 base64ct = "1.6.0"
-base64 = "0.13.0"
+base64 = "0.22.1"
 cipher = "0.4.4"
 digest = { version = "0.10.7", features = ["mac"] }
 rand = "0.8.5"
@@ -75,7 +77,7 @@ serde = { version = "1", features = ["derive"] }
 hex = "0.4"
 ff = "0.13.0"
 
-libtest-mimic = "0.6.1"
+libtest-mimic = "0.7.3"
 
 [profile.dev.package."*"]
 opt-level = 2
